Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.6(EOL), 10.11, 11.4, 11.8, 12.1(EOL), 12.2(EOL)
-
Not for ES Release Notes
-
Q4/2025 Galera Development
Description
The assertion is happening only when we use executable comment syntax in replace statement
--source include/galera_cluster.inc
|
|
|
SET sql_mode=''; |
SET SESSION autocommit=0; |
SET SESSION enforce_storage_engine=Aria; |
SET WSREP_OSU_METHOD = RSU; |
CREATE TABLE t1 (a TEXT) ; |
CREATE TABLE t2 (a TEXT) ; |
SET SESSION autocommit=1; |
REPLACE INTO t2 (a) SELECT /*!99997 */ a from t1; |
Leads to:
|
CS 12.2.0 49c3c2ab3642dbbabc8cba71210ad3c468dd8540 (Debug) Build 21/10/2025 |
mariadbd: /test/12.2_dbg/wsrep-lib/src/transaction.cpp:745: int wsrep::transaction::before_rollback(): Assertion `0' failed.
|
|
CS 12.2.0 49c3c2ab3642dbbabc8cba71210ad3c468dd8540 (Debug) Build 21/10/2025 |
Core was generated by `/test/GAL_MD211025-mariadb-12.2.0-linux-x86_64-dbg/bin/mariadbd --defaults-file'.
|
Program terminated with signal SIGABRT, Aborted.
|
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
|
|
|
[Current thread is 1 (LWP 3033502)]
|
(gdb) bt
|
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
|
#1 __pthread_kill_internal (signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:78
|
#2 __GI___pthread_kill (threadid=<optimized out>, signo=6)at ./nptl/pthread_kill.c:89
|
#3 0x00005ff6df0d2969 in my_write_core (sig=6)at /test/12.2_dbg/mysys/stacktrace.c:424
|
#4 0x00005ff6de751e91 in handle_fatal_signal (sig=6)at /test/12.2_dbg/sql/signal_handler.cc:298
|
#5 <signal handler called>
|
#6 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
|
#7 __pthread_kill_internal (signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:78
|
#8 __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6)at ./nptl/pthread_kill.c:89
|
#9 0x000079d03944527e in __GI_raise (sig=sig@entry=6)at ../sysdeps/posix/raise.c:26
|
#10 0x000079d0394288ff in __GI_abort () at ./stdlib/abort.c:79
|
#11 0x000079d03942881b in __assert_fail_base (fmt=0x79d0395d01e8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x5ff6dfb3f4d7 "0", file=file@entry=0x5ff6dfb3f448 "/test/12.2_dbg/wsrep-lib/src/transaction.cpp", line=line@entry=745, function=function@entry=0x5ff6dfb401b0 "int wsrep::transaction::before_rollback()") at ./assert/assert.c:96
|
#12 0x000079d03943b517 in __assert_fail (assertion=0x5ff6dfb3f4d7 "0", file=0x5ff6dfb3f448 "/test/12.2_dbg/wsrep-lib/src/transaction.cpp", line=745, function=0x5ff6dfb401b0 "int wsrep::transaction::before_rollback()")at ./assert/assert.c:105
|
#13 0x00005ff6df37a42d in wsrep::transaction::before_rollback (this=0x79a5bc0077b0) at /test/12.2_dbg/wsrep-lib/src/transaction.cpp:745
|
#14 0x00005ff6df34a0df in wsrep::client_state::before_rollback (this=0x79a5bc007728) at /test/12.2_dbg/wsrep-lib/src/client_state.cpp:410
|
#15 0x00005ff6de753d09 in wsrep_before_rollback (thd=0x79a5bc000d58, all=false)at /test/12.2_dbg/sql/wsrep_trans_observer.h:453
|
#16 0x00005ff6de758fdf in ha_rollback_trans (thd=0x79a5bc000d58, all=false)at /test/12.2_dbg/sql/handler.cc:2360
|
#17 0x00005ff6de5296e0 in trans_rollback_stmt (thd=0x79a5bc000d58)at /test/12.2_dbg/sql/transaction.cc:567
|
#18 0x00005ff6de325f11 in mysql_execute_command (thd=0x79a5bc000d58, is_called_from_prepared_stmt=false) at /test/12.2_dbg/sql/sql_parse.cc:5940
|
#19 0x00005ff6de32b826 in mysql_parse (thd=0x79a5bc000d58, rawbuf=0x79a5bc019f70 "REPLACE INTO t2 (a) SELECT /*!99997 */ a from t1", length=48, parser_state=0x79cc580c12a0)at /test/12.2_dbg/sql/sql_parse.cc:7886
|
#20 0x00005ff6de32af23 in wsrep_mysql_parse (thd=0x79a5bc000d58, rawbuf=0x79a5bc019f70 "REPLACE INTO t2 (a) SELECT /*!99997 */ a from t1", length=48, parser_state=0x79cc580c12a0)at /test/12.2_dbg/sql/sql_parse.cc:7696
|
#21 0x00005ff6de31836e in dispatch_command (command=COM_QUERY, thd=0x79a5bc000d58, packet=0x79a5bc00b2e9 "REPLACE INTO t2 (a) SELECT /*!99997 */ a from t1", packet_length=48, blocking=true) at /test/12.2_dbg/sql/sql_parse.cc:1865
|
#22 0x00005ff6de317035 in do_command (thd=0x79a5bc000d58, blocking=true)at /test/12.2_dbg/sql/sql_parse.cc:1417
|
#23 0x00005ff6de50a3a5 in do_handle_one_connection (connect=0x5ff6e8ec2ea8, put_in_cache=true) at /test/12.2_dbg/sql/sql_connect.cc:1503
|
#24 0x00005ff6de50a150 in handle_one_connection (arg=0x5ff6e8dc2028)at /test/12.2_dbg/sql/sql_connect.cc:1415
|
#25 0x000079d03949caa4 in start_thread (arg=<optimized out>)at ./nptl/pthread_create.c:447
|
#26 0x000079d039529c3c in clone3 ()at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
|
|
Galera Bug Detection Matrix |
Rel o/d Build Commit UniqueID observed
|
CS 10.6 dbg 190925 764b893cb7f7492b587541fea1880cd7cc91d743 0|SIGABRT|wsrep::transaction::before_rollback|wsrep::client_state::before_rollback|wsrep_before_rollback|ha_rollback_trans
|
CS 10.6 opt 190925 764b893cb7f7492b587541fea1880cd7cc91d743 No bug found
|
CS 10.11 dbg 190925 62b21714d0bab340872de0aec572cce5b5dd3b09 0|SIGABRT|wsrep::transaction::before_rollback|wsrep::client_state::before_rollback|wsrep_before_rollback|ha_rollback_trans
|
CS 10.11 opt 190925 62b21714d0bab340872de0aec572cce5b5dd3b09 No bug found
|
CS 11.4 dbg 190925 acd3db4e44648d55387e51052a9dbd7e63b2c0d1 0|SIGABRT|wsrep::transaction::before_rollback|wsrep::client_state::before_rollback|wsrep_before_rollback|ha_rollback_trans
|
CS 11.4 opt 190925 acd3db4e44648d55387e51052a9dbd7e63b2c0d1 No bug found
|
CS 11.8 dbg 091025 5eeccca5804d0e4726024f6782544ecdd6323d2f 0|SIGABRT|wsrep::transaction::before_rollback|wsrep::client_state::before_rollback|wsrep_before_rollback|ha_rollback_trans
|
CS 11.8 opt 091025 5eeccca5804d0e4726024f6782544ecdd6323d2f No bug found
|
CS 12.1 dbg 190925 667c5e0b002a24bc595d60955950200a588f4fb7 0|SIGABRT|wsrep::transaction::before_rollback|wsrep::client_state::before_rollback|wsrep_before_rollback|ha_rollback_trans
|
CS 12.1 opt 190925 667c5e0b002a24bc595d60955950200a588f4fb7 No bug found
|
CS 12.2 dbg 211025 49c3c2ab3642dbbabc8cba71210ad3c468dd8540 0|SIGABRT|wsrep::transaction::before_rollback|wsrep::client_state::before_rollback|wsrep_before_rollback|ha_rollback_trans
|
CS 12.2 opt 211025 49c3c2ab3642dbbabc8cba71210ad3c468dd8540 No bug found
|
ES 11.4 dbg 190925 0ddbffaced6c2b50ef4c6e0d8685b1fa25148875 No bug found
|
ES 11.4 opt 190925 0ddbffaced6c2b50ef4c6e0d8685b1fa25148875 No bug found
|
ES 11.8 dbg 120925 0d06f96e3bd9ccbe19f23876a7b3117054c3a0fd 0|SIGABRT|wsrep::transaction::before_rollback|wsrep::client_state::before_rollback|wsrep_before_rollback|ha_rollback_trans
|
ES 11.8 opt 120925 0d06f96e3bd9ccbe19f23876a7b3117054c3a0fd No bug found
|