MDEV-37935 : Assertion `0' failed in int wsrep::transaction::before_rollback()

Problem was executable comment in REPLACE that caused
consistency check that is not supported for RSU and
!InnoDB tables.

Fix is to check is Online Schema Upgrade (OSU) method
something else than TOI and if it is then table storage
engine must be InnoDB or error is produced and execution
returns and no consistency check is done.